--- a/Konchady_HW2.ipynb
+++ b/Konchady_HW2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -29,6 +29,8 @@
     "G =  39.8#in AU^3/(1 solar mass*years^2)\n",
     "mu_1 = G*1.\n",
     "mu_2 = G*0.0009543\n",
+    "mu1_ = mu_1/(mu_1+mu_2)\n",
+    "mu2_ = mu_2/(mu_1+mu_2)\n",
     "\n",
     "#define functions for r1, r2, udot, vdot, and position function\n",
     "def r1(x,y,z=0,mu2=mu_2):\n",
@@ -37,11 +39,11 @@
     "def r2(x,y,z=0,mu1=mu_1):\n",
     "    return np.sqrt((x-mu1)**2 + y**2 + z**2)\n",
     "\n",
-    "def udot(x,y,v,mu1=mu_1,mu2=mu_2):\n",
+    "def udot(x,y,v,mu1=mu1_,mu2=mu2_):\n",
     "    u_dot = -(mu1*((x+mu2)/(r1(x,y))**3)) - (mu2*((x-mu1)/(r2(x,y))**3)) + x + (2*v)\n",
     "    return u_dot\n",
     "\n",
-    "def vdot(x,y,u,v,mu1=mu_1,mu2=mu_2):\n",
+    "def vdot(x,y,u,v,mu1=mu1_,mu2=mu2_):\n",
     "    v_dot = -((mu1*y)/(r1(x,y))**3) - ((mu2*y)/(r2(x,y))**3) + y -(2*u)\n",
     "    return v_dot\n",
     "\n",
@@ -56,24 +58,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:14: RuntimeWarning: overflow encountered in double_scalars\n",
-      "  \n",
-      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:18: RuntimeWarning: overflow encountered in double_scalars\n",
-      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:8: RuntimeWarning: overflow encountered in double_scalars\n",
-      "  \n",
-      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:11: RuntimeWarning: overflow encountered in double_scalars\n",
-      "  # This is added back by InteractiveShellApp.init_path()\n",
-      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:23: RuntimeWarning: overflow encountered in double_scalars\n",
-      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:24: RuntimeWarning: overflow encountered in double_scalars\n",
-      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:18: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:25: RuntimeWarning: overflow encountered in double_scalars\n"
+      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:16: RuntimeWarning: overflow encountered in double_scalars\n",
+      "  app.launch_new_instance()\n",
+      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:20: RuntimeWarning: overflow encountered in double_scalars\n",
+      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:10: RuntimeWarning: overflow encountered in double_scalars\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n",
+      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:13: RuntimeWarning: overflow encountered in double_scalars\n",
+      "  del sys.path[0]\n",
+      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:25: RuntimeWarning: overflow encountered in double_scalars\n",
+      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:26: RuntimeWarning: overflow encountered in double_scalars\n",
+      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:27: RuntimeWarning: overflow encountered in double_scalars\n",
+      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:28: RuntimeWarning: overflow encountered in double_scalars\n",
+      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:16: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  app.launch_new_instance()\n",
+      "/home/tkonchady/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:20: RuntimeWarning: invalid value encountered in double_scalars\n"
      ]
     }
    ],
